vbnc/vbnc/tests/Errors/30099.vb
Module Main

	Sub Foo
	
        If True Then
            Exit Select
        End If

	End Sub
	
End Module